--- a/src/api/pages/index.ejs
+++ b/src/api/pages/index.ejs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-  <div id="app">APPLICATION CONTENT</div>
+  <div id="app">Loading...</div>
   <script type="text/javascript" src="http://localhost:8000/assets/app.js"></script>
 </body>
 </html>
