--- a/src/api/pages/index.ejs
+++ b/src/api/pages/index.ejs
@@ -9,6 +9,6 @@
 </head>
 <body>
   <div id="app">Loading...</div>
-  <script type="text/javascript" src="http://localhost:8000/assets/app.js"></script>
+  <script type="text/javascript" src="<%=link%>"></script>
 </body>
 </html>
