--- a/src/api/pages/index.ejs
+++ b/src/api/pages/index.ejs
@@ -1,14 +1,25 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Resonators</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-</head>
-<body>
-  <div id="app">Loading...</div>
-  <script type="text/javascript" src="<%=link%>"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Resonators</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    </head>
+    <body>
+        <% if (typeof version !== 'undefined') {%>
+        <script type="text/javascript">
+            <%-'window.version = ' + version + ';'%>
+            <%-"console.log('%c server version', 'background: #222; color: #bada55; font-size:18px', window.version);"%>
+        </script>
+        <%}%>
+
+        <% if (typeof link !== 'undefined') {%>
+        <div id="app">Loading...</div>
+        <script type="text/javascript" src="<%=link%>"></script>
+        <% } else {%>
+        <div>No client version was found. Forgot to upload it?</div>
+        <% } %>
+    </body>
 </html>
