--- a/src/api/pages/index.ejs
+++ b/src/api/pages/index.ejs
@@ -22,6 +22,12 @@
         </script>
         <%}%>
 
+        <% if (typeof pageData !== 'undefined') {%>
+        <script type="text/javascript">
+            window.pageData = <%-pageData%>;
+        </script>
+        <%}%>
+
         <% if (typeof scriptUrl !== 'undefined') {%>
         <div id="app">Loading...</div>
         <script type="text/javascript" src="<%=scriptUrl%>"></script>
