--- a/src/api/pages/index.ejs
+++ b/src/api/pages/index.ejs
@@ -5,8 +5,10 @@
         <title>Resonators</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="">
+        <meta name="theme-color" content="#00a0b4"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <link rel="manifest" href="<%=manifestUrl%>">
     </head>
     <body>
         <% if (typeof serverVersion !== 'undefined') {%>
